# zvukopad

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASES.md  build.bat  build.rs  build.sh  resource.rc
.github/workflows/: release.yml
src/: app.rs  audio.rs  config.rs  hotkeys.rs  kb_capture.rs  main.rs  ptt.rs  version.rs
