[package]
name = "zvukopad"
version = "1.0.5"
edition = "2021"
description = "Звукопад — бесплатный аналог Soundpad: звуковая панель с горячими клавишами, PTT и выбором устройств вывода"
authors = ["DidimoonYT <didimoonyt@gmail.com>"]
license = "MIT"
repository = "https://github.com/DidimoonYT/zvukopad"
homepage = "https://github.com/DidimoonYT/zvukopad"
readme = "README.md"
keywords = ["soundboard", "soundpad", "audio", "ptt", "hotkeys", "windows"]
categories = ["command-line-utilities", "gui", "multimedia"]

# Windows-specific metadata (icon, etc.)
[package.metadata]
windows = { icon = "icon.ico" }

[dependencies]
# Графический интерфейс
eframe = "0.31"
egui = "0.31"

# Воспроизведение звука (на базе cpal)
rodio = "0.20"

# Глобальные горячие клавиши
global-hotkey = "0.6"

# Сериализация конфигурации
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Пути к пользовательским папкам (для хранения config.json)
dirs = "6"

# Логирование
env_logger = "0.11"
log = "0.4"

# Загрузка иконки
image = "0.25"

# Диалог выбора файла (нативный для ОС)
rfd = "0.15"

[build-dependencies]
# Встраивание иконки в .exe (Windows resources) - более надежный способ
embed-resource = "1"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
strip = true